cabal-version:  2.4

name:           kitty-cat-c-tests
version:        0.1
description:    Tests for kitty-cat-c.
homepage:       https://github.com/con-kitty/kitty-cat-c#readme
bug-reports:    https://github.com/con-kitty/kitty-cat-c/issues
build-type:     Simple
tested-with:    GHC==8.10.1

source-repository head
  type: git
  location: https://github.com/con-kitty/kitty-cat-c

library hedgehog-options
  exposed-modules:
      Kitty.Hedgehog.Options
      Kitty.Hedgehog.Paths
  hs-source-dirs: hedgehog_options
  ghc-options: -Wall
  build-depends:
      PyF
    , base
    , hedgehog
    , optparse-applicative
    , transformers
  default-language: Haskell2010
  default-extensions:
      InstanceSigs
    , ScopedTypeVariables
    , TypeApplications
    , FlexibleContexts
    , FlexibleInstances
    , FunctionalDependencies
    , LambdaCase
    , NoStarIsType
    , TypeOperators
    , BangPatterns
    , StandaloneDeriving
    , DeriveGeneric
    , DeriveDataTypeable
    , DeriveFunctor
    , DeriveFoldable
    , DeriveTraversable
    , DerivingStrategies

test-suite functions
  type: exitcode-stdio-1.0
  hs-source-dirs: functions
  main-is:     Functions.hs
  build-depends:
      async
    , base
    , hedgehog
    , optparse-applicative
    --
    , hedgehog-options
    , kitty-cat-c
    , kitty-cat-c-test-lib
    , kitty-cat-common
  default-language: Haskell2010
  default-extensions:
      InstanceSigs
    , ScopedTypeVariables
    , TypeApplications
    , FlexibleContexts
    , FlexibleInstances
    , FunctionalDependencies
    , LambdaCase
    , NoStarIsType
    , TypeOperators
    , BangPatterns
    , StandaloneDeriving
    , DeriveGeneric
    , DeriveDataTypeable
    , DeriveFunctor
    , DeriveFoldable
    , DeriveTraversable
    , DerivingStrategies

test-suite random-expressions
  type: exitcode-stdio-1.0
  hs-source-dirs: random_expressions
  main-is:     RandomExpressions.hs
  build-depends:
      PyF
    , base
    , extra
    , hedgehog
    , optparse-applicative
    --
    , hedgehog-options
    , kitty-cat-c
    , kitty-cat-c-test-lib
  default-language: Haskell2010
  default-extensions:
      InstanceSigs
    , ScopedTypeVariables
    , TypeApplications
    , FlexibleContexts
    , FlexibleInstances
    , FunctionalDependencies
    , LambdaCase
    , NoStarIsType
    , TypeOperators
    , BangPatterns
    , StandaloneDeriving
    , DeriveGeneric
    , DeriveDataTypeable
    , DeriveFunctor
    , DeriveFoldable
    , DeriveTraversable
    , DerivingStrategies
